Refactor code structure for improved readability and maintainability

--- a/docs-site/docs/07_変数定義.md
+++ b/docs-site/docs/07_変数定義.md
@@ -1,6 +1,6 @@
-# 07. 変数定義 - variables.tfの読み方
+# 07. 変数定義 - variables.tfの読み方 🧩
 
-!!! info "この章で学ぶこと"
+!!! 💡 info "この章で学ぶこと"
     `variables.tf`の型定義を完全理解します：
 
     1. 変数定義の3つの要素（型・バリデーション・デフォルト値）
@@ -12,7 +12,7 @@
 
 ---
 
-## 変数定義の全体像
+## 🗺️ 変数定義の全体像
 
 変数定義（variables.tf）の構造を視覚化してみましょう。
 
@@ -40,7 +40,7 @@ graph TB
     style D fill:#e1ffe1
 ```
 
-**3つの要素**：
+**🔑 3つの要素**：
 
 1. **型定義**：どんなデータ型か（string、number、list等）
 2. **バリデーション**：入力値のチェック（条件を満たさないとエラー）
@@ -48,11 +48,11 @@ graph TB
 
 ---
 
-## variables.tfの役割
+## 📝 variables.tfの役割
 
-**3つの役割がある**：
+**🔎 3つの役割がある**：
 
-### 1. 型の定義
+### 🧬 1. 型の定義
 ```hcl title="型の定義例"
 variable "starter_locations" {
   type = list(string)  # ←文字列のリスト
@@ -63,7 +63,7 @@ variable "starter_locations" {
 
 ---
 
-### 2. バリデーション
+### ✅ 2. バリデーション
 ```hcl title="値のチェック"
 validation {
   condition     = length(var.starter_locations) > 0
@@ -76,7 +76,7 @@ validation {
 
 間違った値が入ってたらエラーを出す。
 
-### 3. デフォルト値
+### 🏷️ 3. デフォルト値
 ```hcl title="初期値の設定"
 variable "enable_telemetry" {
   type    = bool
@@ -88,9 +88,9 @@ variable "enable_telemetry" {
 
 ---
 
-## Part 1: リージョン設定
+## 🗾 Part 1: リージョン設定
 
-### starter_locations
+### 🌍 starter_locations
 
 ```hcl title="リージョン設定変数"
 variable "starter_locations" {
@@ -109,29 +109,29 @@ variable "starter_locations" {
 }
 ```
 
-**分解して見ていきましょう**
+**🔍 分解して見ていきましょう**
 
-#### type = list(string)
+#### 📝 type = list(string)
 ```hcl
 type = list(string)
 ```
 
 **意味**：文字列のリスト
 
-**OK例**：
+**🟢 OK例**：
 ```hcl title="正しい記述例"
 starter_locations = ["japaneast", "japanwest"]  # ✅
 starter_locations = ["eastus"]                   # ✅
 ```
 
-**NG例**：
+**🔴 NG例**：
 ```hcl title="間違った記述例"
 starter_locations = "japaneast"     # ❌ リストじゃない
 starter_locations = [123, 456]      # ❌ 文字列じゃない
 starter_locations = []              # ❌ 空はダメ（次のバリデーションでエラー）
 ```
 
-#### validation 1: 最低1個必要
+#### ✅ validation 1: 最低1個必要
 ```hcl title="空リスト禁止のチェック"
 validation {
   condition     = length(var.starter_locations) > 0
@@ -139,13 +139,13 @@ validation {
 }
 ```
 
-**チェック内容**：
+**🔎 チェック内容**：
 
 - `length(var.starter_locations) > 0`：リストの長さが0より大きい？
 
 - つまり、最低1個は入ってないとダメ
 
-**エラー例**：
+**⚠️ エラー例**：
 ```hcl
 starter_locations = []  # ❌
 
@@ -153,7 +153,7 @@ starter_locations = []  # ❌
 # You must provide at least one starter location region.
 ```
 
-#### validation 2: Hubの数とリージョン数が合ってるか
+#### ✅ validation 2: Hubの数とリージョン数が合ってるか
 ```hcl
 validation {
   condition     = var.connectivity_type == "none" || ((length(var.virtual_hubs) <= length(var.starter_locations)) || (length(var.hub_virtual_networks) <= length(var.starter_locations)))
@@ -161,12 +161,12 @@ validation {
 }
 ```
 
-**意味**：
+**🔎 意味**：
 
 - Hub VNetを2個作るなら、リージョンも2個指定してね
 - Hub VNet 3個なのにリージョン2個だと足りないからエラー
 
-**例**：
+**📝 例**：
 ```hcl title="正しい設定例"
 # OK
 starter_locations = ["japaneast", "japanwest"]
@@ -185,7 +185,7 @@ hub_virtual_networks = {
 
 ---
 
-### starter_locations_short
+### 🏷️ starter_locations_short
 
 ```hcl title="リージョン短縮コードのオーバーライド"
 variable "starter_locations_short" {
@@ -198,16 +198,16 @@ DESCRIPTION
 }
 ```
 
-**これは何？**
+**❓ これは何？**
 
 リージョンの短縮コードを手動で指定したい時に使う。
 
-**デフォルト動作**：
+**🔄 デフォルト動作**：
 
 - `japaneast` → `jpe`（自動生成）
 - `japanwest` → `jpw`（自動生成）
 
-**手動で変えたい場合**：
+**🛠️ 手動で変えたい場合**：
 ```hcl title="短縮コードのカスタマイズ"
 starter_locations_short = {
   starter_location_01_short = "je"   # jpeじゃなくてjeにしたい
@@ -219,9 +219,9 @@ starter_locations_short = {
 
 ---
 
-## Part 2: サブスクリプションID
+## 🆔 Part 2: サブスクリプションID
 
-### subscription_ids（新しい方式）
+### 🗂️ subscription_ids（新しい方式）
 
 ```hcl title="サブスクリプションID変数（推奨）"
 variable "subscription_ids" {
@@ -242,11 +242,11 @@ variable "subscription_ids" {
 }
 ```
 
-**type = map(string)**
+**🧩 type = map(string)**
 
 キーと値のペア。
 
-**使い方**：
+**📝 使い方**：
 ```hcl title="サブスクリプションIDの設定例"
 subscription_ids = {
   management   = "12345678-1234-1234-1234-123456789012"
@@ -256,7 +256,7 @@ subscription_ids = {
 }
 ```
 
-#### validation 1: GUID形式チェック
+#### ✅ validation 1: GUID形式チェック
 ```hcl title="サブスクリプションIDの形式チェック"
 validation {
   condition     = length(var.subscription_ids) == 0 || alltrue([for id in values(var.subscription_ids) : can(regex("^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12})$", id))])
@@ -264,13 +264,13 @@ validation {
 }
 ```
 
-**チェック内容**：
+**🔎 チェック内容**：
 
 - サブスクリプションIDが正しいGUID形式か？
 
 - `xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx`の形式
 
-**NG例**：
+**🔴 NG例**：
 ```hcl
 subscription_ids = {
   management = "abc"  # ❌ GUID形式じゃない
@@ -279,7 +279,7 @@ subscription_ids = {
 # エラー: All subscription IDs must be valid GUIDs
 ```
 
-#### validation 2: キー名チェック
+#### ✅ validation 2: キー名チェック
 ```hcl title="許可されたキー名のチェック"
 validation {
   condition     = length(var.subscription_ids) == 0 || alltrue([for id in keys(var.subscription_ids) : contains(["management", "connectivity", "identity", "security"], id)])
@@ -287,10 +287,10 @@ validation {
 }
 ```
 
-**チェック内容**：
+**🔎 チェック内容**：
 キー名は`management`、`connectivity`、`identity`、`security`のどれかじゃないとダメ。
 
-**NG例**：
+**🔴 NG例**：
 ```hcl
 subscription_ids = {
   production = "12345678-..."  # ❌ productionは使えない
@@ -301,7 +301,7 @@ subscription_ids = {
 
 ---
 
-### subscription_id_connectivity（古い方式）
+### 🗃️ subscription_id_connectivity（古い方式）
 
 ```hcl title="非推奨：古いサブスクリプションID設定"
 variable "subscription_id_connectivity" {
@@ -339,9 +339,9 @@ subscription_ids = {
 
 ---
 
-## Part 3: 管理グループ設定
+## 🏢 Part 3: 管理グループ設定
 
-### root_parent_management_group_id
+### 🏠 root_parent_management_group_id
 
 ```hcl title="管理グループの親設定"
 variable "root_parent_management_group_id" {
@@ -351,7 +351,7 @@ variable "root_parent_management_group_id" {
 }
 ```
 
-**これは何？**
+**これは何？🧐**
 
 Landing Zonesの管理グループ階層を、どこにぶら下げるか。
 
@@ -361,7 +361,7 @@ Tenant Root Group（テナントルート）
   └── ALZの管理グループ階層
 ```
 
-**既存の管理グループの下に作りたい場合**：
+**既存の管理グループの下に作りたい場合🛠️**：
 ```hcl title="カスタム親管理グループの指定"
 root_parent_management_group_id = "/providers/Microsoft.Management/managementGroups/my-company"
 
@@ -374,9 +374,9 @@ my-company
 
 ---
 
-## Part 4: その他の設定
+## 🧰 Part 4: その他の設定
 
-### enable_telemetry
+### 📡 enable_telemetry
 
 ```hcl title="テレメトリー有効/無効設定"
 variable "enable_telemetry" {
@@ -386,7 +386,7 @@ variable "enable_telemetry" {
 }
 ```
 
-**これは何？**
+**これは何？🧐**
 
 Microsoftに使用状況データを送るかどうか。
 
@@ -402,7 +402,7 @@ enable_telemetry = false
 
 ---
 
-### custom_replacements
+### 🛠️ custom_replacements
 
 ```hcl title="カスタム置換変数"
 variable "custom_replacements" {
@@ -420,11 +420,11 @@ variable "custom_replacements" {
 }
 ```
 
-**型が複雑！**
+**型が複雑！🤯**
 
 `object`型で、中に3つの`map(string)`が入ってる。
 
-**object型とは？**
+**object型とは？🧩**
 
 JavaScriptのオブジェクトみたいなやつ。
 
@@ -442,7 +442,7 @@ custom_replacements = {
 }
 ```
 
-optionalって何？
+optionalって何？🤔
 
 - `optional(map(string), {})`：省略可能。省略したら空マップ`{}`になる
 
@@ -461,7 +461,7 @@ Chapter 6で見た設定が、ここで定義されてる。
 
 ---
 
-### tags
+### 🏷️ tags
 
 ```hcl title="タグ変数"
 variable "tags" {
@@ -486,13 +486,13 @@ tags = {
 
 ---
 
-## Part 5: 変数の型まとめ
+## 🧬 Part 5: 変数の型まとめ
 
 Terraformでよく使う型をまとめとくね。
 
-### プリミティブ型（基本型）
+### 🧱 プリミティブ型（基本型）
 
-#### string（文字列）
+#### 📝 string（文字列）
 ```hcl title="文字列型の定義"
 variable "name" {
   type = string
@@ -502,7 +502,7 @@ variable "name" {
 name = "my-resource"
 ```
 
-#### number（数値）
+#### 🔢 number（数値）
 ```hcl title="数値型の定義"
 variable "count" {
   type = number
@@ -512,7 +512,7 @@ variable "count" {
 count = 3
 ```
 
-#### bool（真偽値）
+#### 🔘 bool（真偽値）
 ```hcl title="真偽値型の定義"
 variable "enabled" {
   type = bool
@@ -524,9 +524,9 @@ enabled = true
 
 ---
 
-### コレクション型（複数の値）
+### 📚 コレクション型（複数の値）
 
-#### list（リスト）
+#### 📋 list（リスト）
 ```hcl title="リスト型の定義"
 variable "locations" {
   type = list(string)
@@ -536,7 +536,7 @@ variable "locations" {
 locations = ["japaneast", "japanwest"]
 ```
 
-#### map（マップ）
+#### 🗺️ map（マップ）
 ```hcl title="マップ型の定義"
 variable "tags" {
   type = map(string)
@@ -549,7 +549,7 @@ tags = {
 }
 ```
 
-#### set（セット）
+#### 🧩 set（セット）
 ```hcl title="セット型の定義"
 variable "unique_items" {
   type = set(string)
@@ -561,9 +561,9 @@ unique_items = ["a", "b", "c"]  # 重複は自動削除される
 
 ---
 
-### 構造型（複雑な構造）
+### 🏗️ 構造型（複雑な構造）
 
-#### object（オブジェクト）
+#### 🧩 object（オブジェクト）
 ```hcl title="オブジェクト型の定義"
 variable "vm_config" {
   type = object({
@@ -581,7 +581,7 @@ vm_config = {
 }
 ```
 
-#### optional（省略可能）
+#### 🏷️ optional（省略可能）
 ```hcl title="省略可能なフィールドの定義"
 variable "config" {
   type = object({
@@ -605,9 +605,9 @@ config = {
 
 ---
 
-## バリデーションの書き方
+## ✅ バリデーションの書き方
 
-### 基本パターン
+### 📝 基本パターン
 
 ```hcl title="バリデーションの基本構文"
 variable "example" {
@@ -624,9 +624,9 @@ variable "example" {
 
 ---
 
-### よく使うパターン
+### 🔄 よく使うパターン
 
-#### 長さチェック
+#### 📏 長さチェック
 ```hcl title="リストの長さチェック"
 validation {
   condition     = length(var.my_list) > 0
@@ -634,7 +634,7 @@ validation {
 }
 ```
 
-#### 正規表現チェック
+#### 🔤 正規表現チェック
 ```hcl title="文字列パターンのチェック"
 validation {
   condition     = can(regex("^[a-z0-9-]+$", var.name))
@@ -642,7 +642,7 @@ validation {
 }
 ```
 
-#### 値の範囲チェック
+#### 🎯 値の範囲チェック
 ```hcl title="数値範囲のチェック"
 validation {
   condition     = var.count >= 1 && var.count <= 10
@@ -650,7 +650,7 @@ validation {
 }
 ```
 
-#### 選択肢チェック
+#### 🗂️ 選択肢チェック
 ```hcl title="許可された値のチェック"
 validation {
   condition     = contains(["dev", "stg", "prod"], var.environment)
@@ -658,7 +658,7 @@ validation {
 }
 ```
 
-#### リスト全要素チェック
+#### 🧮 リスト全要素チェック
 ```hcl title="全要素の条件チェック"
 validation {
   condition     = alltrue([for item in var.items : length(item) > 3])
@@ -668,11 +668,11 @@ validation {
 
 ---
 
-## 実践：自分で変数を追加してみよう
+## 🛠️ 実践：自分で変数を追加してみよう
 
 例えば、「Firewallの名前をカスタマイズしたい」って時。
 
-### 1. variables.tfに追加
+### 1️⃣ variables.tfに追加
 ```hcl title="カスタムFirewall名変数の定義"
 variable "custom_firewall_name" {
   type        = string
@@ -688,14 +688,14 @@ variable "custom_firewall_name" {
 
 ---
 
-### 2. platform-landing-zone.auto.tfvarsで使う
+### 2️⃣ platform-landing-zone.auto.tfvarsで使う
 ```hcl title="カスタムFirewall名の設定"
 custom_firewall_name = "fw-my-custom-firewall"
 ```
 
 ---
 
-### 3. main.tfで参照
+### 3️⃣ main.tfで参照
 ```hcl title="Firewallリソースで変数を使用"
 resource "azurerm_firewall" "example" {
   name = var.custom_firewall_name != null ? var.custom_firewall_name : "fw-default"
@@ -707,7 +707,7 @@ resource "azurerm_firewall" "example" {
 
 ---
 
-## まとめ
+## 📝 まとめ
 
 **variables.tfの役割**：
 
@@ -731,11 +731,11 @@ resource "azurerm_firewall" "example" {
 
 ---
 
-## 練習問題
+## 🏋️‍♂️ 練習問題
 
 理解度チェックです。休憩中に考えてみましょう。
 
-### 問題1
+### ❓ 問題1
 次の変数定義のうち、正しくないものはどれですか？
 
 ```hcl
@@ -744,11 +744,11 @@ B. variable "count" { type = number, default = 1 }
 C. variable "tags" { type = map(string) }
 ```
 
-### 問題2
+### ❓ 問題2
 `optional`修飾子を使った変数定義で、  
 省略時に空文字列（`""`）がデフォルトになるように書いてください。
 
-### 問題3
+### ❓ 問題3
 次のvalidation条件は何をチェックしていますか？
 
 ```hcl
@@ -760,9 +760,9 @@ validation {
 
 ---
 
-## 練習問題の答え
+## 📝 練習問題の答え
 
-### 答え1
+### 💡 答え1
 **B が間違い**です。
 
 ```hcl
@@ -776,7 +776,7 @@ variable "count" {
 }
 ```
 
-### 答え2
+### 💡 答え2
 ```hcl title="optional修飾子でデフォルト値を指定"
 variable "description" {
   type = object({
@@ -787,7 +787,7 @@ variable "description" {
 
 `optional(string, "")`とすることで、省略時に空文字列がデフォルトになります。
 
-### 答え3
+### 💡 答え3
 リージョンが`japaneast`または`japanwest`のみ許可されることをチェックしています。
 
 `contains(list, value)`で、リストに値が含まれているか確認します。
