--- a/docs-site/docs/08_ローカル変数.md
+++ b/docs-site/docs/08_ローカル変数.md
@@ -1,4 +1,4 @@
-# 08. ローカル変数 - locals.tfの役割
+# 08. 🧩 ローカル変数 - locals.tfの役割
 
 !!! info "この章で学ぶこと"
     `locals.tf`の役割と実装パターンを理解します：
@@ -12,9 +12,9 @@
 
 ---
 
-## locals（ローカル変数）とは？
+## 🏷️ locals（ローカル変数）とは？
 
-### 定義方法
+### 📝 定義方法
 
 ```hcl title="ローカル変数の定義"
 locals {
@@ -23,7 +23,7 @@ locals {
 }
 ```
 
-**使い方**：
+**使い方🛠️**：
 ```hcl title="ローカル変数の参照"
 resource "azurerm_resource_group" "example" {
   name     = local.full_name  # ←local.で参照
@@ -31,14 +31,14 @@ resource "azurerm_resource_group" "example" {
 }
 ```
 
-**ポイント**：
+**ポイント💡**：
 
 - 定義：`locals { ... }`（複数形）
 - 参照：`local.xxx`（単数形）
 
 ---
 
-### variablesとの違い
+### 🔄 variablesとの違い
 
 **初心者がよく混乱するポイントです。しっかり理解しましょう。**
 
@@ -50,7 +50,7 @@ resource "azurerm_resource_group" "example" {
 | 使う場面 | ユーザーが設定する値 | 計算した値 |
 | 変更のタイミング | 実行時に指定 | コード内で固定 |
 
-**具体例で理解する**:
+**具体例で理解する🧩**:
 
 ```hcl title="variablesとlocalsの使い分け"
 # variables.tf（ユーザーが決める）
@@ -78,7 +78,7 @@ locals {
 }
 ```
 
-**どっちを使えばいいか迷ったら**:
+**どっちを使えばいいか迷ったら🤔**:
 
 ```
 ユーザーに変更させたい？
@@ -149,7 +149,7 @@ resource "azurerm_resource_group" "main" {
 }
 ```
 
-**覚え方**:
+**覚え方📝**:
 
 - variables: 入力（ユーザーが決める）
 - locals: 処理（自動で計算）
@@ -157,7 +157,7 @@ resource "azurerm_resource_group" "main" {
 
 ---
 
-## Part 1: 定数定義
+## 🧱 Part 1: 定数定義
 
 ```hcl title="接続タイプの定数定義"
 locals {
@@ -171,18 +171,18 @@ locals {
 }
 ```
 
-**これは何？**
+**これは何？🧐**
 
 定数を定義しています。マジックストリング（文字列直書き）を避けるためです。
 
-**悪い例**：
+**悪い例🚫**：
 ```hcl title="マジックストリング（非推奨）"
 if (var.connectivity_type == "hub_and_spoke_vnet") {  # ←タイポしやすい
   ...
 }
 ```
 
-**良い例**：
+**良い例🟢**：
 ```hcl title="定数を使った安全な記述"
 if (var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet) {
   # ←補完が効く、タイポしたらエラーになる
@@ -200,7 +200,7 @@ if (var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet) {
 
 ---
 
-## Part 2: 接続タイプの判定
+## 🧩 Part 2: 接続タイプの判定
 
 ```hcl title="接続タイプによるフラグ設定"
 locals {
@@ -210,13 +210,13 @@ locals {
 }
 ```
 
-**これは何？**
+**これは何？🧐**
 
 `connectivity_type`の値を見て、フラグを作っています。
 
 ---
 
-### connectivity_enabled
+### ✅ connectivity_enabled
 
 ```hcl title="ネットワーク有効化フラグ"
 connectivity_enabled = var.connectivity_type != local.const.connectivity.none
@@ -241,7 +241,7 @@ connectivity_type = "none"
 local.connectivity_enabled = false  # ←noneだからfalse
 ```
 
-**使い道**：
+**使い道🛠️**：
 ```hcl
 # ネットワーク作る時だけリソース作成
 resource "azurerm_xxx" "example" {
@@ -252,7 +252,7 @@ resource "azurerm_xxx" "example" {
 
 ---
 
-### connectivity_virtual_wan_enabled
+### 🌐 connectivity_virtual_wan_enabled
 
 ```hcl
 connectivity_virtual_wan_enabled = var.connectivity_type == local.const.connectivity.virtual_wan
@@ -271,7 +271,7 @@ local.connectivity_virtual_wan_enabled = true
 
 ---
 
-### connectivity_hub_and_spoke_vnet_enabled
+### 🕸️ connectivity_hub_and_spoke_vnet_enabled
 
 ```hcl
 connectivity_hub_and_spoke_vnet_enabled = var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet
@@ -288,7 +288,7 @@ connectivity_type = "hub_and_spoke_vnet"
 local.connectivity_hub_and_spoke_vnet_enabled = true
 ```
 
-**なんでこんなことするの？**
+**なんでこんなことするの？🤔**
 
 main.tfで条件分岐しやすくするため。
 
@@ -308,7 +308,7 @@ module "virtual_wan" {
 
 ---
 
-## Part 3: リソースグループの依存関係
+## 🗂️ Part 3: リソースグループの依存関係
 
 ```hcl title="リソース作成順序の制御"
 locals {
@@ -322,15 +322,15 @@ locals {
 }
 ```
 
-**これは何？**
+**これは何？🧐**
 
 リソースグループを先に作ってから、ネットワークを作るための仕組み。
 
 ---
 
-### Terraformの依存関係
+### 🔗 Terraformの依存関係
 
-**問題**：
+**問題⚠️**：
 ```hcl
 # リソースグループ
 resource "azurerm_resource_group" "network" {
@@ -348,7 +348,7 @@ resource "azurerm_virtual_network" "hub" {
 
 ---
 
-### resource_groups
+### 🗂️ resource_groups
 
 ```hcl
 resource_groups = {
@@ -360,7 +360,7 @@ resource_groups = {
 
 ---
 
-### merge関数
+### 🧬 merge関数
 
 ```hcl
 hub_and_spoke_networks_settings = merge(
@@ -371,7 +371,7 @@ hub_and_spoke_networks_settings = merge(
 
 **merge関数**：2つのオブジェクトをマージする
 
-**イメージ**：
+**イメージ📝**：
 ```hcl
 # 元のデータ
 hub_and_spoke_networks_settings = {
@@ -387,14 +387,14 @@ hub_and_spoke_networks_settings = {
 }
 ```
 
-**効果**：
+**効果💡**：
 
 - `resource_groups`を含めることで、Terraformが自動で依存関係を理解する
 - リソースグループ → ネットワークの順番で作られる
 
 ---
 
-### hub_virtual_networks
+### 🕸️ hub_virtual_networks
 
 ```hcl
 hub_virtual_networks = (merge({ vnets = module.config.outputs.hub_virtual_networks }, local.resource_groups)).vnets
@@ -426,7 +426,7 @@ merge(
 { ... }  # ←vnetsの中身だけ
 ```
 
-**なんでこんなことするの？**
+**なんでこんなことするの？🤔**
 
 - `resource_groups`を含めて依存関係を作る
 - でも最終的には`vnets`だけほしい
@@ -435,7 +435,7 @@ merge(
 
 ---
 
-## Part 4: ポリシーの依存関係
+## 🛡️ Part 4: ポリシーの依存関係
 
 ```hcl title="ポリシー割り当ての依存関係定義"
 locals {
@@ -454,23 +454,23 @@ locals {
 }
 ```
 
-**これは何？**
+**これは何？🧐**
 
 管理グループにポリシーを割り当てる前に、他のリソースを先に作るための仕組み。
 
 ---
 
-### なんで必要なの？
+### なんで必要なの？🤔
 
-**シナリオ**：
+**シナリオ📝**：
 
 1. Log Analyticsワークスペースを作る
 2. ポリシーで「全リソースはLog Analyticsにログ送信」を設定
 
-**問題**：
+**問題⚠️**：
 ポリシーを先に作ると、Log Analyticsがまだないからエラーになる。
 
-**解決策**：
+**解決策💡**：
 ```hcl
 policy_assignments = [
   module.management_resources,  # ←これらを先に作る
@@ -495,7 +495,7 @@ policy_assignments = [
 
 ---
 
-## Part 5: 最終的な設定のマージ
+## 🧬 Part 5: 最終的な設定のマージ
 
 ### management_group_settings
 
@@ -510,13 +510,13 @@ locals {
 }
 ```
 
-**やってること**：
+**やってること🛠️**：
 
 1. `module.config`から管理グループの設定を取得
 2. `dependencies`（依存関係）を追加
 3. マージして最終設定を作る
 
-**イメージ**：
+**イメージ📝**：
 ```hcl
 # 元の設定
 management_group_settings = {
@@ -593,9 +593,9 @@ management_resource_settings.tags = { environment = "prod" }
 
 ---
 
-## locals.tfのパターンまとめ
+## 🧩 locals.tfのパターンまとめ
 
-### パターン1: 定数定義
+### 1️⃣ パターン1: 定数定義
 
 ```hcl title="enumパターン"
 locals {
@@ -611,11 +611,11 @@ locals {
 status = local.const.status.active
 ```
 
-**メリット**：タイポ防止、補完が効く
+**メリット💡**：タイポ防止、補完が効く
 
 ---
 
-### パターン2: 条件分岐
+### 2️⃣ パターン2: 条件分岐
 
 ```hcl title="環境別の分岐"
 locals {
@@ -624,11 +624,11 @@ locals {
 }
 ```
 
-**メリット**：複雑な条件をわかりやすく
+**メリット💡**：複雑な条件をわかりやすく
 
 ---
 
-### パターン3: データ加工
+### 3️⃣ パターン3: データ加工
 
 ```hcl title="リージョン名の短縮"
 locals {
@@ -641,11 +641,11 @@ locals {
 }
 ```
 
-**メリット**：変換ロジックを1箇所に集約
+**メリット💡**：変換ロジックを1箇所に集約
 
 ---
 
-### パターン4: 依存関係の明示
+### 4️⃣ パターン4: 依存関係の明示
 
 ```hcl title="リソース作成順序の制御"
 locals {
@@ -656,11 +656,11 @@ locals {
 }
 ```
 
-**メリット**：リソースの作成順序を制御
+**メリット💡**：リソースの作成順序を制御
 
 ---
 
-### パターン5: デフォルト値のフォールバック
+### 5️⃣ パターン5: デフォルト値のフォールバック
 
 ```hcl title="省略時のデフォルト値"
 locals {
@@ -668,13 +668,13 @@ locals {
 }
 ```
 
-**メリット**：柔軟な設定、省略時の挙動を制御
+**メリット💡**：柔軟な設定、省略時の挙動を制御
 
 ---
 
-## 実践：locals.tfを書いてみよう
+## 🛠️ 実践：locals.tfを書いてみよう
 
-### 例1: 環境別の設定
+### 例1️⃣: 環境別の設定
 
 ```hcl title="環境による設定切り替え"
 # variables.tf
@@ -708,7 +708,7 @@ resource "azurerm_virtual_machine" "example" {
 
 ---
 
-### 例2: 命名規則の統一
+### 例2️⃣: 命名規則の統一
 
 ```hcl title="リソース名の自動生成"
 # variables.tf
@@ -745,7 +745,7 @@ resource "azurerm_virtual_network" "example" {
 
 ---
 
-### 例3: 条件付きリソース作成
+### 例3️⃣: 条件付きリソース作成
 
 ```hcl title="機能の有効/無効制御"
 # variables.tf
@@ -780,9 +780,9 @@ resource "azurerm_monitor_diagnostic_setting" "advanced" {
 
 ---
 
-## デバッグ技：locals の値を確認する
+## 🐞 デバッグ技：locals の値を確認する
 
-**output使おう**
+**output使おう💡**
 
 ```hcl title="デバッグ用output定義"
 # outputs.tf
@@ -795,7 +795,7 @@ output "debug_locals" {
 }
 ```
 
-**実行**：
+**実行🛠️**：
 ```bash
 terraform plan
 
@@ -815,7 +815,7 @@ Outputs:
 
 ---
 
-## まとめ
+## 📝 まとめ
 
 **locals.tfの役割**：
 
@@ -825,7 +825,7 @@ Outputs:
 4. **データ加工**：変数を計算・変換
 5. **デフォルト値**：フォールバック処理
 
-**覚えておくこと**：
+**覚えておくこと📝**：
 
 - 定義：`locals { ... }`（複数形）
 - 参照：`local.xxx`（単数形）
@@ -834,11 +834,11 @@ Outputs:
 
 ---
 
-## 練習問題
+## 🏋️‍♂️ 練習問題
 
 理解度チェックです。
 
-### 問題1
+### ❓ 問題1
 以下のコードで、`local.resource_group_name`の値は何になりますか？
 
 ```hcl title="練習問題1"
@@ -855,11 +855,11 @@ locals {
 }
 ```
 
-### 問題2
+### ❓ 問題2
 `variables`と`locals`の違いを説明してください。  
 どんな時に`locals`を使うべきですか？
 
-### 問題3
+### ❓ 問題3
 以下のコードは何をしていますか？
 
 ```hcl title="練習問題3"
@@ -870,16 +870,16 @@ locals {
 
 ---
 
-## 練習問題の答え
+## 📝 練習問題の答え
 
-### 答え1
+### 💡 答え1
 ```
 rg-prod-japaneast
 ```
 
 文字列補間で`var.environment`（prod）と`var.location`（japaneast）が結合されます。
 
-### 答え2
+### 💡 答え2
 **違い**:
 
 - `variables`: 外部から値を受け取る（ユーザーが設定）
@@ -891,7 +891,7 @@ rg-prod-japaneast
 - 条件判定をして値を決める時
 - 同じ計算を繰り返し使う時（DRY原則）
 
-### 答え3
+### 💡 答え3
 三項演算子を使って、環境が本番（prod）かどうかを判定しています。
 
 ```
