--- a/docs-site/docs/09_設定テンプレート.md
+++ b/docs-site/docs/09_設定テンプレート.md
@@ -1,4 +1,4 @@
-# 09. 設定テンプレート - パラメーター置換エンジン完全解説
+# 09. 🧩 設定テンプレート - パラメーター置換エンジン完全解説
 
 !!! info "この章で学ぶこと"
     `modules/config-templating/`モジュールの全ファイルを完全解説します：
@@ -14,9 +14,9 @@
 
 ---
 
-## はじめに：テンプレートエンジンの正体
+## 🏷️ はじめに：テンプレートエンジンの正体
 
-### 「穴埋めゲーム」の仕組み
+### 🕳️「穴埋めゲーム」の仕組み
 
 このモジュールが何をしているか、超シンプルな例で理解しましょう。
 
@@ -44,11 +44,11 @@
 
     穴が埋まった！
 
-これがこのモジュールの役割です。シンプルでしょ？
+これがこのモジュールの役割です。シンプルでしょ？✨
 
 ---
 
-### なぜテンプレート化するの？
+### 🤔 なぜテンプレート化するの？
 
 !!! question "直接書けばいいんじゃない？"
     ```hcl title="直接書いた場合"
@@ -56,13 +56,13 @@
     secondary_resource_group_name = "rg-management-japanwest"
     ```
 
-**問題点：**
+**問題点⚠️：**
 
 - リージョンを変更したい時、全部書き直し
 - 3リージョン、4リージョンに増やす時、大変
 - コピペミスが起きやすい
 
-**テンプレートを使うと：**
+**テンプレートを使うと💡：**
 ```hcl title="テンプレート方式"
 resource_group_name = "rg-management-$${starter_location_01}"
 # ↑ この1行だけでOK
@@ -71,11 +71,11 @@ starter_locations = ["japaneast", "japanwest", "koreacentral"]
 # ↑ ここを変えるだけで全部適用される
 ```
 
-楽だよね！
+楽だよね！😆
 
 ---
 
-## モジュールの構造
+## 🏗️ モジュールの構造
 
 ```text title="modules/config-templating/のファイル構成"
 modules/config-templating/
@@ -86,7 +86,7 @@ modules/config-templating/
 └── outputs.tf        ← 処理結果を出力（2つ）
 ```
 
-**処理の流れ：**
+**処理の流れ🛠️：**
 
 ```mermaid
 graph TB
@@ -104,7 +104,7 @@ graph TB
 
 ---
 
-## Part 1: terraform.tf - バージョン設定
+## 📝 Part 1: terraform.tf - バージョン設定
 
 まずは基本設定から。
 
@@ -120,14 +120,14 @@ terraform {
 }
 ```
 
-**何を定義してる？**
+**何を定義してる？🧐**
 
 | 項目 | 値 | 意味 |
 |------|-----|------|
 | `required_version` | `~> 1.12` | Terraform 1.12以上が必要 |
 | `azurerm` プロバイダー | `~> 4.0` | Azure Provider 4.x系を使用 |
 
-**`~>`の意味：**
+**`~>`の意味📝：**
 ```text
 ~> 1.12 = 1.12以上、2.0未満
 ~> 4.0  = 4.0以上、5.0未満
@@ -137,11 +137,11 @@ terraform {
 
 ---
 
-## Part 2: variables.tf - 入力変数の定義
+## 🧩 Part 2: variables.tf - 入力変数の定義
 
 このモジュールが受け取る変数を全部見ていきます。**全10個あります。**
 
-### 全体像
+### 🗺️ 全体像
 
 ```hcl title="modules/config-templating/variables.tf（完全版：59行）"
 variable "starter_locations" {
@@ -218,7 +218,7 @@ variable "starter_locations" {
 }
 ```
 
-**役割：** メインリージョンのリスト
+**役割📝：** メインリージョンのリスト
 
 **具体例：**
 ```hcl
@@ -244,7 +244,7 @@ variable "starter_locations_short" {
 }
 ```
 
-**役割：** リージョン短縮名のカスタム上書き（オプション）
+**役割📝：** リージョン短縮名のカスタム上書き（オプション）
 
 **具体例：**
 ```hcl
@@ -282,7 +282,7 @@ variable "subscription_id_security" {
 }
 ```
 
-**役割：** 4つの専用サブスクリプションのID
+**役割📝：** 4つの専用サブスクリプションのID
 
 | サブスクリプション | 用途 |
 |-------------------|------|
@@ -313,7 +313,7 @@ variable "root_parent_management_group_id" {
 }
 ```
 
-**役割：** 管理グループの最上位親ID
+**役割📝：** 管理グループの最上位親ID
 
 **デフォルト動作：**
 
@@ -344,7 +344,7 @@ variable "custom_replacements" {
 }
 ```
 
-**役割：** カスタム置換変数の定義
+**役割📝：** カスタム置換変数の定義
 
 **3つのレベル：**
 
@@ -386,7 +386,7 @@ variable "inputs" {
 }
 ```
 
-**役割：** 置換対象の全設定
+**役割📝：** 置換対象の全設定
 
 **具体例：**
 ```hcl
@@ -401,7 +401,7 @@ inputs = {
 }
 ```
 
-**`any`型の意味：**
+**`any`型の意味📝：**
 
 どんな構造でもOK。このモジュールはJSON化してテンプレート置換するだけなので。
 
@@ -422,19 +422,19 @@ DESCRIPTION
 }
 ```
 
-**役割：** テレメトリ（利用統計）の送信可否
+**役割📝：** テレメトリ（利用統計）の送信可否
 
 **値：**
 - `true` （デフォルト）: Microsoftに利用統計を送信
 - `false`: 送信しない
 
-**`nullable = false`の意味：**
+**`nullable = false`の意味📝：**
 
 `null`は許可しない。必ず`true`か`false`を指定。
 
 ---
 
-## Part 3: data.tf - 外部データの取得
+## 🗃️ Part 3: data.tf - 外部データの取得
 
 置換に使うデータを集めます。
 
@@ -462,11 +462,11 @@ module "regions" {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 
 Azureの全リージョン情報を提供するモジュール。
 
-**取得できる情報：**
+**取得できる情報📝：**
 ```hcl
 module.regions.regions_by_name["japaneast"] = {
   name         = "japaneast"
@@ -477,7 +477,7 @@ module.regions.regions_by_name["japaneast"] = {
 }
 ```
 
-**パラメータ：**
+**パラメータ📝：**
 
 - `use_cached_data = false`: キャッシュを使わず最新データを取得
 - `enable_telemetry`: 変数から受け継ぐ
@@ -497,10 +497,10 @@ module.regions.regions_by_name["japaneast"].geo_code
 data "azurerm_client_config" "current" {}
 ```
 
-**何してる？**  
+**何してる？🧐**  
 現在ログイン中のAzure環境情報を取得。
 
-**取得される情報：**
+**取得される情報📝：**
 ```hcl
 data.azurerm_client_config.current = {
   tenant_id       = "xxxx-xxxx-xxxx-xxxx"  # テナントID
@@ -510,16 +510,16 @@ data.azurerm_client_config.current = {
 }
 ```
 
-**なぜ必要？**  
+**なぜ必要？🤔**  
 `root_parent_management_group_id`が未指定の場合、テナントIDを使います。
 
 ---
 
-## Part 4: locals.config.tf - 置換ロジックの核心
+## 🧬 Part 4: locals.config.tf - 置換ロジックの核心
 
 ここがこのモジュールの心臓部です。
 
-### 全体の処理フロー
+### 🗺️ 全体の処理フロー
 
 ```mermaid
 graph TB
@@ -551,7 +551,7 @@ locals {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 リストをマップに変換。
 
 **具体例：**
@@ -566,7 +566,7 @@ local.starter_locations = {
 }
 ```
 
-**`format("%02d", i + 1)`の意味：**
+**`format("%02d", i + 1)`の意味📝：**
 
 - `i`は0始まり
 - `i + 1`で1始まりに
@@ -592,10 +592,10 @@ local.starter_locations = {
   }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 リージョンの短縮名を作成。4段階のフォールバック。
 
-**coalesceの仕組み：**
+**coalesceの仕組み📝：**
 ```hcl
 coalesce(値1, 値2, 値3, 値4)
 # 最初に見つかったnullでない値を返す
@@ -622,7 +622,7 @@ try(module.regions.regions_by_name["japaneast"].geo_code, null)      # → "jpe"
 starter_location_01_short = "jpe"
 ```
 
-**なぜ`try()`を使う？**  
+**なぜ`try()`を使う？🤔**  
 存在しないキーにアクセスするとエラーになるので、`try()`で`null`に変換。
 
 ---
@@ -643,10 +643,10 @@ starter_location_01_short = "jpe"
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 組み込み変数をすべて1つのマップに統合。
 
-**merge()の動作：**
+**merge()の動作📝：**
 ```hcl
 merge(マップ1, マップ2, マップ3)
 # すべてのキーを1つのマップに結合
@@ -674,7 +674,7 @@ local.built_in_replacements = {
 }
 ```
 
-**三項演算子の処理：**
+**三項演算子の処理📝：**
 ```hcl
 var.root_parent_management_group_id == "" 
   ? data.azurerm_client_config.current.tenant_id 
@@ -698,13 +698,13 @@ locals {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 カスタム名にテンプレート置換を適用。
 
-**なぜ複雑？**  
+**なぜ複雑？🤔**  
 `templatestring()`関数が`true`/`false`を文字列として扱ってしまうため、特殊処理が必要。
 
-**処理ステップ：**
+**処理ステップ📝：**
 
 1. **JSON化**: `jsonencode()` → オブジェクトをJSON文字列に
 2. **ブール値保護**: `"true"` → `"{{string_true}}"`
@@ -751,7 +751,7 @@ locals {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 組み込み変数とカスタム名を統合。
 
 **結果：**
@@ -784,7 +784,7 @@ locals {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 リソースグループのフルパスを生成。
 
 **ステップ4と同じパターン：**
@@ -804,7 +804,7 @@ var.custom_replacements.resource_group_identifiers = {
 }
 ```
 
-**前のステップで作った変数を使える：**
+**前のステップで作った変数を使える：
 
 - `$${subscription_id_connectivity}` ← built_in_replacements
 - `$${connectivity_resource_group_name}` ← custom_names
@@ -819,7 +819,7 @@ locals {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 カスタム名とRGパスを統合。
 
 **結果：**
@@ -848,7 +848,7 @@ locals {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 個別リソースのフルパスを生成。
 
 **具体例：**
@@ -864,7 +864,7 @@ var.custom_replacements.resource_identifiers = {
 }
 ```
 
-**前のステップで作った変数を使える：**
+**前のステップで作った変数を使える：
 
 - `$${connectivity_rg_id}` ← custom_resource_group_identifiers
 - `$${firewall_name}` ← custom_names
@@ -879,7 +879,7 @@ locals {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 すべての置換変数を1つのマップに統合。
 
 **最終的な内容：**
@@ -900,7 +900,7 @@ locals {
 }
 ```
 
-**階層構造の完成：**
+**階層構造の完成🧩：**
 ```text
 組み込み変数
   ↓
@@ -924,10 +924,10 @@ locals {
 }
 ```
 
-**何してる？**  
+**何してる？🧐**  
 すべての入力設定に対してテンプレート置換を実行。
 
-**for式の構造：**
+**for式の構造📝：**
 ```hcl
 { for key, value in var.inputs : key => 処理(value) }
 ```
@@ -983,7 +983,7 @@ output "custom_replacements" {
 }
 ```
 
-**何を出力？**  
+**何を出力？🧐**  
 すべての置換変数のマップ。
 
 **具体例：**
@@ -1013,7 +1013,7 @@ output "outputs" {
 }
 ```
 
-**何を出力？**  
+**何を出力？🧐**  
 置換済みの全設定。
 
 **具体例：**
@@ -1041,13 +1041,13 @@ output "outputs" {
 
 ---
 
-## Part 6: 実践 - カスタム変数の追加
+## 🛠️ Part 6: 実践 - カスタム変数の追加
 
 実際にテンプレート変数を追加してみましょう。
 
 ### シナリオ: 環境名を追加したい
 
-**要件：**
+**要件📝：**
 
 - `dev`, `stg`, `prod`のような環境名をリソース名に含めたい
 - 例: `rg-connectivity-dev-japaneast`
@@ -1135,11 +1135,11 @@ rg-connectivity-stg-japaneast
 vnet-hub-stg-japaneast
 ```
 
-この1箇所を変えるだけで、すべてのリソース名が切り替わります！
+この1箇所を変えるだけで、すべてのリソース名が切り替わります！✨
 
 ---
 
-## まとめ
+## 📝 まとめ
 
 **config-templatingモジュールの役割**：
 
@@ -1149,7 +1149,7 @@ vnet-hub-stg-japaneast
 4. **locals.config.tf**: 10ステップの置換処理
 5. **outputs.tf**: 置換変数と置換済み設定を出力
 
-**処理の流れ**：
+**処理の流れ🛠️**：
 
 - regionsモジュールでリージョン情報を取得
 - client_configで現在のAzure認証情報を取得
@@ -1158,7 +1158,7 @@ vnet-hub-stg-japaneast
 - JSON処理でブール値を保護
 - 最終的に全設定ファイルの変数を置換
 
-**重要なポイント**：
+**重要なポイント📝**：
 
 - 段階的処理で10ステップの変数置換
 - ブール値はJSON処理で保護（true/falseが文字列にならない）
@@ -1170,31 +1170,31 @@ vnet-hub-stg-japaneast
 
 ---
 
-## 練習問題
+## 🏋️‍♂️ 練習問題
 
 理解度チェックです。
 
-### 問題1
+### ❓ 問題1
 config-templatingモジュールの主な役割は何ですか？
 
-### 問題2
+### ❓ 問題2
 以下の変数プレースホルダーは、どのように置換されますか？
 
 ```hcl
 location = "$${starter_location_01}"
 ```
 
-### 問題3
+### ❓ 問題3
 `locals.config.tf`で行われる10ステップの処理のうち、最初の3ステップは何をしていますか？
 
-### 問題4
+### ❓ 問題4
 なぜブール値（true/false）をJSON処理する必要があるのですか？
 
 ---
 
-## 練習問題の答え
+## 📝 練習問題の答え
 
-### 答え1
+### 💡 答え1
 
 config-templatingモジュールの主な役割は、設定ファイル内の変数プレースホルダー（`$${変数名}`）を実際の値に置換することです。
 
@@ -1205,7 +1205,7 @@ config-templatingモジュールの主な役割は、設定ファイル内の変
 
 これにより、同じテンプレートを使って異なる環境を簡単に構築できます。
 
-### 答え2
+### 💡 答え2
 `$${starter_location_01}`は、`variables.tf`で定義された`starter_locations`配列の最初の要素に置換されます。
 
 処理の流れ：
@@ -1214,7 +1214,7 @@ config-templatingモジュールの主な役割は、設定ファイル内の変
 2. `local.starter_locations[0] = "japaneast"`
 3. `$${starter_location_01}` → `"japaneast"`
 
-### 答え3
+### 💡 答え3
 最初の3ステップは：
 
 **ステップ1: starter_locations**
@@ -1233,7 +1233,7 @@ config-templatingモジュールの主な役割は、設定ファイル内の変
 - 例：`starter_location_01 = "japaneast"`
 - この段階で30個以上の変数が定義される
 
-### 答え4
+### 💡 答え4
 
 ブール値を通常の文字列置換で処理すると、`true`が`"true"`（文字列）になってしまうからです。
 
