--- a/docs-site/docs/10_リソースグループ.md
+++ b/docs-site/docs/10_リソースグループ.md
@@ -1,19 +1,20 @@
-# 10. リソースグループ - 基盤の作成
+# 10. リソースグループ - 基盤の作成 📦
+
 
 !!! info "この章で学ぶこと"
     `main.resource.groups.tf`でリソースグループを作成する仕組みを学びます：
 
-    1. リソースグループって何？
-    2. main.resource.groups.tfの解説
-    3. 公式モジュールの内部構造（完全解説）
-    4. for_eachの活用方法
-    5. 実践：新しいリソースグループの追加方法
+    1. 📦リソースグループって何？
+    2. 📝main.resource.groups.tfの解説
+    3. 🏗️公式モジュールの内部構造（完全解説）
+    4. 🔁for_eachの活用方法
+    5. 🛠️実践：新しいリソースグループの追加方法
 
 ---
 
-## はじめに：リソースグループって何？
+## はじめに：リソースグループって何？📦
 
-### Azureの「フォルダ」みたいなもの
+### 🗂️Azureの「フォルダ」みたいなもの
 
 リソースグループは、Azureリソースをまとめて管理する「箱」です。
 
@@ -32,7 +33,7 @@
         └── 人事DB（Database）
     ```
 
-    部署ごとに管理！
+    部署ごとに管理！✨
 
 === "Azure Landing Zonesの構成"
 
@@ -51,16 +52,16 @@
 
 ---
 
-### リソースグループのメリット
+### 🌟リソースグループのメリット
 
-- **まとめて管理**: 関連リソースを1箇所に
-- **一括削除**: リソースグループごと削除可能
-- **タグ管理**: コスト管理や分類
-- **RBAC**: アクセス権限の設定
+- **まとめて管理**: 関連リソースを1箇所に📦
+- **一括削除**: リソースグループごと削除可能🗑️
+- **タグ管理**: コスト管理や分類🏷️
+- **RBAC**: アクセス権限の設定🔑
 
 ---
 
-### どこで定義するの？
+### 📝どこで定義するの？
 
 リソースグループは `platform-landing-zone.auto.tfvars` で定義します。
 
@@ -107,15 +108,15 @@ connectivity_resource_groups = {
 
 ```
 1. platform-landing-zone.auto.tfvars で定義
-   ↓
+  ↓
 2. modules/config-templating で変数置換
-   ↓
+  ↓
 3. main.resource.groups.tf で作成
 ```
 
 ---
 
-## Part 1: main.resource.groups.tf の全体像
+## 🏗️Part 1: main.resource.groups.tf の全体像
 
 ```hcl title="main.resource.groups.tf"
 module "resource_groups" {
@@ -135,13 +136,13 @@ module "resource_groups" {
 }
 ```
 
-**たった15行！** でも強力な公式モジュールを使っています。
+**たった15行！** でも強力な公式モジュールを使っています。💪
 
 ---
 
-## Part 2: コードを詳しく見ていく
+## 🔍Part 2: コードを詳しく見ていく
 
-### 2-1: モジュールの基本設定
+### 🧩2-1: モジュールの基本設定
 
 ```hcl
 module "resource_groups" {
@@ -170,7 +171,7 @@ Azure公式の「Azure Verified Modules (AVM)」を使用。
 
 ---
 
-### 2-2: for_eachでループ処理
+### 🔁2-2: for_eachでループ処理
 
 ```hcl
 for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
@@ -219,7 +220,7 @@ for_each = { for key, value in module.config.outputs.connectivity_resource_group
 
 ---
 
-### 2-3: try()関数の役割
+### 🛡️2-3: try()関数の役割
 
 ```hcl
 if try(value.settings.enabled, true)
@@ -247,7 +248,7 @@ if try(value.settings.enabled, true)
 
 ---
 
-### 2-4: タグの優先順位
+### 🏷️2-4: タグの優先順位
 
 ```hcl
 tags = try(each.value.tags, null) == null ? module.config.outputs.tags : each.value.tags
@@ -262,7 +263,7 @@ tags = try(each.value.tags, null) == null ? module.config.outputs.tags : each.va
 1. `each.value.tags`: リソースグループ固有のタグ
 2. `module.config.outputs.tags`: グローバルタグ
 
-### 2-5: プロバイダー指定
+### ☁️2-5: プロバイダー指定
 
 ---
 
@@ -278,9 +279,9 @@ providers = {
 
 ---
 
-## Part 3: 公式モジュールの内部構造
+## 🏗️Part 3: 公式モジュールの内部構造
 
-### 3-1: モジュール全体像
+### 🧩3-1: モジュール全体像
 
 **GitHubリポジトリ：**
 
@@ -305,7 +306,7 @@ terraform-azurerm-avm-res-resources-resourcegroup/
 
 ---
 
-### 3-2: main.tf - リソース作成の中核
+### 🏗️3-2: main.tf - リソース作成の中核
 
 ```hcl title="main.tf（完全版）"
 resource "azurerm_resource_group" "this" {
@@ -349,7 +350,7 @@ resource "azurerm_role_assignment" "this" {
 
 ---
 
-### 3-3: variables.tf - 入力変数定義
+### 📝3-3: variables.tf - 入力変数定義
 
 ```hcl title="variables.tf（主要部分）"
 variable "location" {
@@ -465,7 +466,7 @@ variable "tags" {
 
 ---
 
-### 3-4: outputs.tf - 出力定義
+### 📤3-4: outputs.tf - 出力定義
 
 ```hcl title="outputs.tf"
 output "name" {
@@ -494,7 +495,7 @@ output "resource_id" {
 
 ---
 
-### 3-5: terraform.tf - プロバイダー要件
+### ☁️3-5: terraform.tf - プロバイダー要件
 
 ```hcl title="terraform.tf"
 terraform {
@@ -532,7 +533,7 @@ terraform {
 
 ---
 
-### 3-6: locals.tf - ローカル変数
+### 🧮3-6: locals.tf - ローカル変数
 
 ```hcl title="locals.tf"
 locals {
@@ -546,7 +547,7 @@ Role Definition IDの判定に使用。
 
 ---
 
-### 3-7: data.tf - データソース
+### 🔎3-7: data.tf - データソース
 
 ```hcl title="data.tf"
 data "azurerm_subscription" "current" {}
@@ -558,7 +559,7 @@ data "azurerm_subscription" "current" {}
 
 ---
 
-### 3-8: main.telemetry.tf - テレメトリー
+### 📡3-8: main.telemetry.tf - テレメトリー
 
 ```hcl title="main.telemetry.tf（抜粋）"
 data "modtm_module_source" "telemetry" {
@@ -590,9 +591,9 @@ Microsoftにモジュール使用状況を送信（匿名化）。
 
 ---
 
-## Part 4: 動作の完全な流れ
+## 🚀Part 4: 動作の完全な流れ
 
-### ステップ1: 設定テンプレートから取得
+### 1️⃣ステップ1: 設定テンプレートから取得
 
 ```hcl title="module.config.outputs.connectivity_resource_groups"
 {
@@ -612,7 +613,7 @@ Microsoftにモジュール使用状況を送信（匿名化）。
 
 ---
 
-### ステップ2: for_eachでフィルタリング
+### 2️⃣ステップ2: for_eachでフィルタリング
 
 ```hcl title="フィルタリング処理"
 for_each = {
@@ -637,7 +638,7 @@ for_each = {
 
 ---
 
-### ステップ3: モジュール呼び出し
+### 3️⃣ステップ3: モジュール呼び出し
 
 ```hcl title="実際の呼び出し"
 module "resource_groups" {
@@ -661,7 +662,7 @@ module "resource_groups" {
 
 ---
 
-### ステップ4: モジュール内部で実行
+### 4️⃣ステップ4: モジュール内部で実行
 
 ```hcl title="main.tf内で実行"
 resource "azurerm_resource_group" "this" {
@@ -676,7 +677,7 @@ resource "azurerm_resource_group" "this" {
 
 ---
 
-### ステップ5: リソース作成
+### 5️⃣ステップ5: リソース作成
 
 ```bash
 # Terraform実行
@@ -693,17 +694,17 @@ terraform apply
 
 ---
 
-## Part 5: 実践 - 新しいリソースグループの追加とカスタマイズ
+## 🛠️Part 5: 実践 - 新しいリソースグループの追加とカスタマイズ
 
-### パターン1: 基本的なリソースグループ追加
+### 📝パターン1: 基本的なリソースグループ追加
 
-**要件：**
+**要件：**📝
 
 - 名前: `rg-security-japaneast`
 - リージョン: `japaneast`
 - カスタムタグ: 追加
 
-#### 手順1: 設定ファイルに追加
+#### 手順1: 設定ファイルに追加🛠️
 
 ```hcl title="platform-landing-zone.auto.tfvars"
 connectivity_resource_groups = {
@@ -722,7 +723,7 @@ connectivity_resource_groups = {
 }
 ```
 
-#### 手順2: Terraform実行
+#### 手順2: Terraform実行🚀
 
 ```bash
 terraform plan
@@ -741,7 +742,7 @@ terraform plan
 terraform apply
 ```
 
-#### 手順3: 確認
+#### 手順3: 確認🔍
 
 ```bash
 az group show --name rg-security-japaneast
@@ -762,9 +763,9 @@ az group show --name rg-security-japaneast
 
 ---
 
-### パターン2: 削除防止ロック付きリソースグループ
+### パターン2: 削除防止ロック付きリソースグループ🔒
 
-**要件：**
+**要件：**📝
 
 - 名前: `rg-production-japaneast`
 - リージョン: `japaneast`
@@ -775,7 +776,7 @@ az group show --name rg-security-japaneast
     
     以下の手順でmain.resource.groups.tfを修正してから、設定ファイルを変更します。
 
-#### 手順1: main.resource.groups.tfを修正
+#### 手順1: main.resource.groups.tfを修正🛠️
 
 ```hcl title="main.resource.groups.tf（修正前）"
 module "resource_groups" {
@@ -818,7 +819,7 @@ module "resource_groups" {
 }
 ```
 
-#### 手順2: 設定ファイルにロックを追加
+#### 手順2: 設定ファイルにロックを追加🔒
 
 ```hcl title="platform-landing-zone.auto.tfvars"
 connectivity_resource_groups = {
@@ -833,7 +834,7 @@ connectivity_resource_groups = {
 }
 ```
 
-#### 手順3: Terraform実行
+#### 手順3: Terraform実行🚀
 
 ```bash
 terraform plan
@@ -856,7 +857,7 @@ terraform plan
 terraform apply
 ```
 
-#### 手順4: ロックの確認
+#### 手順4: ロックの確認🔍
 
 ```bash
 az lock list --resource-group rg-production-japaneast
@@ -877,9 +878,9 @@ az lock list --resource-group rg-production-japaneast
 
 ---
 
-### パターン3: RBAC権限付きリソースグループ
+### パターン3: RBAC権限付きリソースグループ🛡️
 
-**要件：**
+**要件：**📝
 
 - 名前: `rg-app-japaneast`
 - リージョン: `japaneast`
@@ -889,7 +890,7 @@ az lock list --resource-group rg-production-japaneast
 !!! warning "main.resource.groups.tf の修正が必要"
     `role_assignments`パラメータも現在は渡していません。
 
-#### 手順1: main.resource.groups.tfを修正
+#### 手順1: main.resource.groups.tfを修正🛠️
 
 ```hcl title="main.resource.groups.tf（修正後）"
 module "resource_groups" {
@@ -915,7 +916,7 @@ module "resource_groups" {
 }
 ```
 
-#### 手順2: Principal IDを取得
+#### 手順2: Principal IDを取得🆔
 
 開発者と閲覧者のPrincipal IDを取得します。
 
@@ -927,7 +928,7 @@ az ad user show --id developer@example.com --query id -o tsv
 az ad sp show --id <app-id> --query id -o tsv
 ```
 
-#### 手順3: 設定ファイルに権限を追加
+#### 手順3: 設定ファイルに権限を追加🔑
 
 ```hcl title="platform-landing-zone.auto.tfvars"
 connectivity_resource_groups = {
@@ -950,7 +951,7 @@ connectivity_resource_groups = {
 }
 ```
 
-#### 手順4: Terraform実行
+#### 手順4: Terraform実行🚀
 
 ```bash
 terraform plan
@@ -979,7 +980,7 @@ terraform plan
 terraform apply
 ```
 
-#### 手順5: 権限の確認
+#### 手順5: 権限の確認🔍
 
 ```bash
 az role assignment list --resource-group rg-app-japaneast --output table
@@ -996,15 +997,15 @@ viewer@example.com     Reader       /subscriptions/.../rg-app-japaneast
 
 ---
 
-## まとめ
+## まとめ📝
 
-**リソースグループ作成の役割**：
+**リソースグループ作成の役割**：📦
 
 1. **公式モジュール使用**: Azure Verified Modulesで安全・確実
 2. **for_eachループ**: 複数リソースグループを効率的に作成
 3. **フィルタリング**: `enabled`フラグで柔軟に制御
 
-**モジュール構造**：
+**モジュール構造**：🧩
 
 - **main.resource.groups.tf**: ルートモジュールでfor_eachループ
 - **main.tf**: 公式モジュール呼び出し
@@ -1013,7 +1014,7 @@ viewer@example.com     Reader       /subscriptions/.../rg-app-japaneast
 - **terraform.tf**: プロバイダー要件定義
 - **main.telemetry.tf**: テレメトリー送信（オプション）
 
-**重要なポイント**：
+**重要なポイント**：🌟
 
 - for_eachで複数リソースグループを一括作成
 - enabled = trueのものだけ作成（フィルタリング）
@@ -1024,11 +1025,11 @@ viewer@example.com     Reader       /subscriptions/.../rg-app-japaneast
 
 ---
 
-## 練習問題
+## 練習問題💡
 
-理解度チェックです。
+理解度チェックです。📝
 
-### 問題1
+### 問題1❓
 以下のfor_each式は、どのリソースグループを作成しますか？
 
 ```hcl
@@ -1041,20 +1042,20 @@ resource_groups = {
 for_each = { for k, v in var.resource_groups : k => v if v.enabled }
 ```
 
-### 問題2
+### 問題2❓
 Azure Verified Modulesを使うメリットを2つ挙げてください。
 
-### 問題3
+### 問題3❓
 リソースグループの`lock`パラメータで設定できる2つのロックレベルは何ですか？
 
-### 問題4
+### 問題4❓
 テレメトリーを無効化するには、どの変数を`false`に設定すれば良いですか？
 
 ---
 
-## 練習問題の答え
+## 練習問題の答え📝
 
-### 答え1
+### 答え1✅
 
 作成されるリソースグループは**2つ**です：
 
@@ -1064,7 +1065,7 @@ Azure Verified Modulesを使うメリットを2つ挙げてください。
 
 `if v.enabled`のフィルタリングにより、`enabled = true`のものだけが`for_each`に渡されます。
 
-### 答え2
+### 答え2✅
 Azure Verified Modulesのメリット：
 
 1. **セキュリティと品質保証**：Microsoftが公式にレビュー・検証済み
@@ -1072,7 +1073,7 @@ Azure Verified Modulesのメリット：
 3. **継続的な更新**：Azure APIの変更に自動追従
 4. **テスト済み**：本番環境で使える信頼性
 
-### 答え3
+### 答え3✅
 リソースグループのロックレベルは2種類：
 
 **1. CanNotDelete（削除防止）**：
@@ -1085,7 +1086,7 @@ Azure Verified Modulesのメリット：
 
 本番環境では`CanNotDelete`を推奨（変更はできるけど誤削除は防ぐ）。
 
-### 答え4
+### 答え4✅
 テレメトリーを無効化するには：
 
 ```hcl
@@ -1096,7 +1097,7 @@ enable_telemetry = false
 
 ---
 
-次のChapterでは、管理グループとポリシーの構築を見ていきます。ALZの心臓部で、一番複雑だけど超重要なところだよ。
+次のChapterでは、管理グループとポリシーの構築を見ていきます。ALZの心臓部で、一番複雑だけど超重要なところだよ。💓
 
 ---
 
